<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="appName" translatable="false">Echtzeyt</string>
    <string name="appVersion" translatable="false" />
    <string name="appNameSettings">Settings</string>
    <string name="appNameLicenses">Licenses</string>
    <string name="widgetName" translatable="false">Echtzeyt Widget</string>
    <string name="widgetNameSettings">Configure</string>
    <string name="widgetDescription">Realtime information in a small widget</string>
    <string name="widgetClassConfigure" translatable="false">com.maddin.echtzeyt.EchtzeytWidgetConfigure</string>
    <string name="widgetConfigureRunUntil">Run for/until</string>
    <string-array name="widgetConfigureRunUntilOptionNames">
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>stopped</item>
    </string-array>
    <string name="widgetConfigureRunEvery">Update every</string>
    <string-array name="widgetConfigureRunEveryOptionNames">
        <item>second</item>
        <item>2 seconds</item>
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>30 seconds</item>
        <item>minute</item>
    </string-array>
    <string name="widgetNotLoaded">Widget not loaded</string>
    <string name="widgetNotLoadedInfo">You can click on, resize or change the settings of this widget to (re-)activate it</string>
    <string name="widgetNoStation">No station selected</string>
    <string name="widgetReload">Reload/Update widget</string>
    <string name="widgetStop">Stop widget</string>
    <string name="btnSearchDescription">Show</string>
    <string name="btnSearchOnMapDescription">Search on map</string>
    <string name="btnLocateDescription">Locate me on the map</string>
    <string name="btnLikeDescription">Add this station to bookmarks</string>
    <string name="btnInfoDescription">Show more information</string>
    <string name="edtSearchTip">Enter station name…</string>
    <string name="stringEmpty" translatable="false" tools:keep="@string/stringEmpty" />
    <string name="btnBookmarksDescription">Show bookmarks</string>
    <string name="btnSettingsDescription">Settings</string>
    <string name="btnDonateDescription">Support me</string>
    <string name="btnMessageDescription">Feedback</string>
    <string name="btnAnnouncementDescription">Announcement</string>
    <string name="txtBookmarksHeading">Saved stations:</string>
    <string name="txtBookmarksEmpty">No favourites yet. Use the star icon in the station information dialog to add a station to your favourites. You can use your favourite stations as a quick access. Simply tap on the station you want to check out.</string>
    <string name="settingsSaveContent">Save last station</string>
    <string name="settingsAutoDark">Use default color scheme</string>
    <string name="settingsDarkMode">Dark Mode</string>
    <string name="settingsUpdateInterval">Update Interval</string>
    <string-array name="settingsUpdateIntervalOptionNames">
        <item>1 second</item>
        <item>2 seconds</item>
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
    </string-array>
    <string name="settingsRealtimeSlowerUpdates">Fewer future/past updates</string>
    <string name="settingsRealtimeSlowerUpdatesDescription">Update fewer times when looking at connections far in the future or in the past</string>
    <string name="settingsRealtimeUseIcons">Use line-icons</string>
    <string name="settingsRealtimeUseIconsDescription">Show icons to display line numbers instead of plain text</string>
    <string name="settingsRealtimeIconsSameWidth">Equal line-icon width</string>
    <string name="settingsRealtimeIconsSameWidthDescription">Force line-icons to be the same width</string>
    <string name="settingsRealtimeTimeAfter">Show absolute time after</string>
    <string name="settingsRealtimeTimeAfterDescription">Show absolute time (20:03) instead of waiting time (2m 32s) for departures in the far future</string>
    <string-array name="settingsRealtimeTimeAfterOptionNames">
        <item>always</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>5 hours</item>
        <item>10 hours</item>
        <item>never</item>
    </string-array>
    <string name="settingsRealtimeTimeAfterPast">Show absolute time after</string>
    <string name="settingsRealtimeTimeAfterPastDescription">Show absolute time (20:03) for departures in the past</string>
    <string-array name="settingsRealtimeTimeAfterPastOptionNames">
        <item>immediately</item>
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>30 minutes</item>
        <item>never</item>
    </string-array>
    <string name="settingsRealtimeHideCancelled">Hide cancelled connections</string>
    <string name="settingsRealtimeNegativeTimes">Show negative waiting times</string>
    <string name="settingsMapUseMobileData">Use mobile data to load map</string>
    <string name="menuSettingsGeneral">General</string>
    <string name="menuSettingsRealtime">Realtime</string>
    <string name="menuSettingsTrips">Trips</string>
    <string name="menuSettingsMap">Map</string>
    <string name="menuSettingsAbout">About</string>
    <string name="updateNotYet">Not updated yet!</string>
    <string name="updateLast">Last updated:</string>
    <string name="updateEmptyNow">It seems like nothing is departing from here anytime soon.</string>
    <string name="updateEmptyTime">It seems like nothing is departing from here at your selected time.</string>
    <string name="updateStationEmpty">Please enter a station name</string>
    <string name="updateStationInvalid">The station name you\'ve entered could not be found.</string>
    <string name="realtimeShowFromNow">Show connections from now</string>
    <string name="realtimeShowFromTime">Show connections from %1$s</string>
    <string name="tripStationFrom">From…</string>
    <string name="tripStationVia">Via…</string>
    <string name="tripStationTo">To…</string>
    <string name="tripNoOfStations">%1$s Stations</string>
    <string name="tripInstructions">Instructions</string>
    <string name="btnMenuDescription">Show menu</string>
    <string name="contactTitle">Give feedback (email)</string>
    <string name="contactEmail" translatable="false" />
    <string name="contactSubject">Feedback / Bug report</string>
    <string name="contactBody">Hey,\n\n --- please describe you wishes/problems/… either in english or german ---\n\n\n ---\nGreetings</string>
    <string name="contactBodyError">\n\n The following errors occurred while trying to use the app:\n\n</string>
    <string name="contactError">An error occurred, do you have an email client installed?</string>
    <string name="urlSupportMe" translatable="false" />
    <string name="urlNotification" translatable="false" />
    <string name="urlNotificationQuery" />
    <string name="notificationTitleDefault">You should not see this error?!</string>
    <string name="notificationTextDefault">Hi, apparently there was an error while displaying the error :/ This is the default text and you should not see it. You can either close or report it to me via e-mail, see the bottom right menu to report it.</string>
    <string name="notificationToastInvalid">Currently, there is no notification, announcement or other information.</string>
    <string name="notificationToastOtherError">An unexpected error occurred while trying to show you the latest announcement, please try again later.</string>
    <string name="btnClose">Close</string>
    <string name="sendLogsTitle">Send logs?</string>
    <string name="sendLogsText">It seems you may experienced something unusual. Do you want to report it by including the latest errors in your feedback email?</string>
    <string name="sendLogsYes">Yes, send error logs</string>
    <string name="sendLogsNo">No</string>
    <string name="pullupNoServingLines">It seems like nothing departs from here.</string>
    <string name="mapStationConfirm">Use selected station</string>
    <string name="mapBack">Go back</string>
    <string name="mapMobileAllowTitle">Allow mobile data?</string>
    <string name="mapMobileAllowText">Some parts of the map seem to not be able to load. Do you want to allow to use your mobile data to download map data? You can change this behaviour in the settings at any time.</string>
    <string name="mapMobileAllowPermanent">Yes, permanently</string>
    <string name="mapMobileAllowTemporary">Only this time</string>
    <string name="mapMobileAllowNo">No</string>
    <string name="mapLocationEnableTitle">Enable your Location</string>
    <string name="mapLocationEnableText">You don\'t have your location enabled. To show where you are currently located, the location is needed. Please enable your location using your status bar or by going into your settings.</string>
    <string name="mapLocationEnableSettings">Go to Settings</string>
    <string name="mapLocationEnableDone">Done</string>
    <string name="mapLocationEnableCancel">Cancel</string>
    <string name="mapOutsidePermittedArea">You seem to be outside of the covered area</string>
    <string name="mapNoGpsProviders">No location providers could be found. Does your device have GPS functionality?</string>
    <string name="mapCopyright" translatable="false">&#169; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a></string>
    <string name="licenseBase">This App is based on the <a href="https://github.com/maddinkunze/echtzeyt">Echtzeyt</a> Framework.</string>
    <string name="licenseSelf">The App itself is published under the Apache License 2.0.</string>
    <string name="licenseLibrariesTitle">The following libraries are currently used:</string>
    <string name="licenseLibraries"><ul>
        <li><a href="https://github.com/osmdroid/osmdroid">OSMDroid</a> (Apache License 2.0)</li>\n
        <li><a href="https://github.com/material-components/material-components-android">Material Components</a> by Google (Apache License 2.0)</li>\n
        <li><a href="https://github.com/maddinkunze/transportapi">TransportAPI</a></li>
    </ul></string>
    <string name="licenseAdditionalTitle">Furthermore, the following sources were used in some way, shape, or form:</string>
    <string name="licenseAdditional"><ul>
        <li>Map Data by <a href="https://openstreetmap.org/">OpenStreetMap</a> and contributors</li>\n
        <li>Some icons from <a href="https://svgrepo.com/">SVGRepo</a> (PD, CC0 or similar license)</li>
    </ul></string>
    <string name="licenseAdditionalImplementation" />
    <string name="dddepDepart">Depart</string>
    <string name="dddepArrive">Arrive</string>
    <string name="dddepNow">Now</string>
    <string name="dddep15M">In 15 minutes</string>
    <string name="dddep1H">In 1 hour</string>
    <string name="dddepSelectTime">Choose time</string>
    <string name="dddepSelectDate">Choose date</string>
    <string name="dddepDBYesterday" />
    <string name="dddepYesterday">Yesterday</string>
    <string name="dddepToday">Today</string>
    <string name="dddepTomorrow">Tomorrow</string>
    <string name="dddepDATomorrow" />
    <string name="_libraryEchtzeytBasedOn">based on\u0020</string>
    <string name="_libraryEchtzeytName" translatable="false">Echtzeyt</string>
    <string name="_libraryEchtzeytVersion" translatable="false" />

    <string name="urlMapDownload" translatable="false">https://lol</string>
    <item name="fileMapRaw" type="raw">@raw/chemnitz</item>
    <string name="fileMapExtracted" translatable="false">extracted.map</string>
</resources>