<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Echtzeyt"
    tools:context=".fragments.settings.AboutSettingsFragment">

    <com.maddin.echtzeyt.components.BottomFadeEdgeScrollView
        android:id="@+id/scrollLicenses"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="@dimen/toolbar_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/licenses_item_margin"
            android:paddingTop="20dp"
            android:paddingRight="@dimen/licenses_item_margin"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/licenseBase"
                android:textColor="@color/foregroundText"
                android:textColorLink="@color/foreground"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/licenseSelf"
                android:textColorLink="@color/foregroundText"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/licenses_item_margin"
                android:text="@string/licenseLibrariesTitle"
                android:textColor="@color/foregroundText"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/licenseLibraries"
                android:textColor="@color/foregroundText"
                android:textColorLink="@color/foreground" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/licenses_item_margin"
                android:text="@string/licenseAdditionalTitle"
                android:textColor="@color/foregroundText"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/licenseAdditional"
                android:textColor="@color/foregroundText"
                android:textColorLink="@color/foreground" />
        </LinearLayout>
    </com.maddin.echtzeyt.components.BottomFadeEdgeScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>